--- a/exercicio-14/index.html
+++ b/exercicio-14/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="./main.js" defer></script>
     <title>Exercicio 14</title>
 </head>
 <body>
