--- a/exercicio-15/index.html
+++ b/exercicio-15/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <script src="/main.js" defer></script>
+    <script src="/exercicio-15/js/calc.js" defer></script>
     <title>Calculadora JS</title>
 </head>
 
